# ROS_2_Integration_WS_cpp

./: .gitignore
communication_ws/: JANUS.txt
communication_ws/src/evocomx/: CMakeLists.txt  package.xml
communication_ws/src/evocomx/include/lib/: README.md
communication_ws/src/evocomx/src/: publisher.cpp  working.cpp  working2.cpp
communication_ws/src/nodecomx/: package.xml  setup.py
communication_ws/src/nodecomx/launch/: nodecomx.launch.py
communication_ws/src/nodecomx/nodecomx/: gradient_hessian_calculator.py  processing_node.py  receiver_node.py  transmitter_node.py
communication_ws_cpp/src/nodecomx_cpp_py/scripts/: processing_node.py
rov_test_01_ws/src/rov_test/: package.xml  setup.cfg  setup.py
rov_test_01_ws/src/rov_test/rov_test/: rov_test.py
sens_test_01_ws/src/test_sens/: package.xml  setup.cfg  setup.py
sens_test_01_ws/src/test_sens/test_sens/: test_sens.py
